add script from peter

--- a/n98-magerun.yaml
+++ b/n98-magerun.yaml
@@ -4,3 +4,6 @@ autoloaders:
 commands:
    customCommands:
        - FIREGENTO\Magento\Command\Eav\ConfigValuesCommand
+       - FIREGENTO\Magento\Command\Eav\CleanUpAttributesCommand
+
+
