Added store view cleanup script from Peter

--- a/n98-magerun.yaml
+++ b/n98-magerun.yaml
@@ -5,5 +5,6 @@ commands:
    customCommands:
        - FIREGENTO\Magento\Command\Eav\ConfigValuesCommand
        - FIREGENTO\Magento\Command\Eav\CleanUpAttributesCommand
+       - FIREGENTO\Magento\Command\Eav\CleanUpStoreViewValuesCommand
 
 
