Added command to clean up values of removed store views

--- a/n98-magerun.yaml
+++ b/n98-magerun.yaml
@@ -9,3 +9,4 @@ commands:
        - FIREGENTO\Magento\Command\Eav\RestoreUseDefaultValueCommand
        - FIREGENTO\Magento\Command\Eav\MessdataCommand
        - FIREGENTO\Magento\Command\Eav\CleanUpScopeValuesCommand
+       - FIREGENTO\Magento\Command\Eav\CleanUpRemovedStoreViewValuesCommand
