--- a/n98-magerun.yaml
+++ b/n98-magerun.yaml
@@ -6,6 +6,7 @@ commands:
        - FIREGENTO\Magento\Command\Eav\ConfigValuesCommand
        - FIREGENTO\Magento\Command\Eav\CleanUpAttributesCommand
        - FIREGENTO\Magento\Command\Eav\CheckAttributeModelsCommand
+       - FIREGENTO\Magento\Command\Eav\CheckUnusedMediaCommand
        - FIREGENTO\Magento\Command\Eav\RestoreUseDefaultValueCommand
        - FIREGENTO\Magento\Command\Eav\MessdataCommand
        - FIREGENTO\Magento\Command\Eav\CleanUpScopeValuesCommand
