Add 'eav:clean:entity-type-values' command
Remove attribute values with wrong entity_type_id.
For example the table catalog_product_entity_int should only contain
entries with entity_type_id == 10.

--- a/n98-magerun.yaml
+++ b/n98-magerun.yaml
@@ -11,3 +11,4 @@ commands:
        - FIREGENTO\Magento\Command\Eav\MessdataCommand
        - FIREGENTO\Magento\Command\Eav\CleanUpScopeValuesCommand
        - FIREGENTO\Magento\Command\Eav\CleanUpRemovedStoreViewValuesCommand
+       - FIREGENTO\Magento\Command\Eav\CleanUpEntityTypeValuesCommand
