Add 'eav:clean:attributes-and-values-without-parent' command
* Remove catalog_eav_attribute attributes which are missing
parent entry in eav_attribute (for product and category)

* Remove attribute values which are missing parent entry in eav_attribute
for product, category, customer and customer address

--- a/n98-magerun.yaml
+++ b/n98-magerun.yaml
@@ -12,3 +12,4 @@ commands:
        - FIREGENTO\Magento\Command\Eav\CleanUpScopeValuesCommand
        - FIREGENTO\Magento\Command\Eav\CleanUpRemovedStoreViewValuesCommand
        - FIREGENTO\Magento\Command\Eav\CleanUpEntityTypeValuesCommand
+       - FIREGENTO\Magento\Command\Eav\CleanUpAttributesAndValuesWithoutParentCommand
