--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "n98/magerun": "1.94.0"
+        "n98/magerun": ">=1.94.0"
     },
     "autoload": {
         "psr-0": {
