--- a/n98-magerun.yaml
+++ b/n98-magerun.yaml
@@ -7,7 +7,7 @@ commands:
        - FIREGENTO\Magento\Command\Eav\CheckAttributeModelsCommand
        - FIREGENTO\Magento\Command\Eav\RemoveUnusedMediaCommand
        - FIREGENTO\Magento\Command\Eav\RestoreUseDefaultValueCommand
-       - FIREGENTO\Magento\Command\Eav\MessdataCommand
+       #- FIREGENTO\Magento\Command\Eav\MessdataCommand
        - FIREGENTO\Magento\Command\Eav\CleanUpScopeValuesCommand
        - FIREGENTO\Magento\Command\Eav\CleanUpRemovedStoreViewValuesCommand
        - FIREGENTO\Magento\Command\Eav\CleanUpEntityTypeValuesCommand
