Added command to remove attributes that are unused

--- a/n98-magerun.yaml
+++ b/n98-magerun.yaml
@@ -6,6 +6,7 @@ commands:
        - FIREGENTO\Magento\Command\Eav\CleanUpProductAttributeSetValuesCommand
        - FIREGENTO\Magento\Command\Eav\CheckAttributeModelsCommand
        - FIREGENTO\Magento\Command\Eav\RemoveUnusedMediaCommand
+       - FIREGENTO\Magento\Command\Eav\RemoveUnusedAttributesCommand
        - FIREGENTO\Magento\Command\Eav\RestoreUseDefaultValueCommand
        #- FIREGENTO\Magento\Command\Eav\MessdataCommand
        - FIREGENTO\Magento\Command\Eav\CleanUpScopeValuesCommand
