--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
         "php": ">=5.3.0",
         "n98/magerun": ">=1.94.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^6"
+    },
     "autoload": {
         "psr-0": {
             "FIREGENTO": "src/"
